# Solace

./: .gitattributes  .gitignore  Cargo.toml  ENGINES.md  NETWORK.md  PHASE1.md  README.md  components.json  next.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
backend/: Cargo.toml  README.md
backend/scripts/: setup_cef.ps1
backend/src/: main.rs
backend/src/engine/: blink.rs  mod.rs
backend/src/ipc/: mod.rs  types.rs
backend/src/network/: mod.rs
backend/src/security/: mod.rs
backend/src/ui/: mod.rs
frontent/: package-lock.json  package.json
frontent/app/: layout.tsx  page.tsx  providers.tsx
frontent/components/: BrowserControls.tsx
frontent/lib/: ipc.ts
frontent/types/: ipc.ts
src/: .npmrc  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser.rs  engine.rs  main.rs  webview.rs  window_controls.rs
src/lib/: types.ts
src/lib/components/browser/: StartPage.svelte  Tab.svelte  TabManager.svelte
src/routes/: +layout.svelte  +page.svelte
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src/app/: globals.css  layout.tsx  page.tsx
src/src/app/hooks/: useBrowser.ts
src/src/app/view/: page.tsx
