[package]
name = "solace-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "solace_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [
    "macos-private-api",
    "window-all",
    "shell-open",
    "shell-execute",
    "protocol-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4"
window-shadows = "0.2"
once_cell = "1.18"
url = "2.5"
wry = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
block = "0.1"
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.27"
windows = { version = "0.48", features = ["Win32_Foundation"] }

[package.metadata.bundle]
identifier = "com.solace.browser"
resources = ["resources/*"]
copyright = "© 2024"
category = "Developer Tool"
short_description = "A modern web browser"
long_description = """
A modern web browser built with Tauri and native WebKit/Chromium engines.
"""

