[package]
name = "solace-browser"
version = "0.1.0"
description = "A privacy-first web browser"
authors = ["Solace Browser Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["api-all"] }
tokio = { version = "1.32.0", features = ["full"] }
window-shadows = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.28.0"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true 
